Work Log Entry 6